# apps/api/src/modules/fuel_stations/fuel_stations.service.ts
@@ -38,6 +38,7 @@ export class FuelStationsService {
         cng: true,
         ev: true,
         fuelUntyped: true,
+        googlePlaceId: true,
       },
     });
 
